--- a/force-app/main/default/classes/myMetricsController.cls
+++ b/force-app/main/default/classes/myMetricsController.cls
@@ -66,7 +66,7 @@ public without sharing class myMetricsController {
             }
         }
           returnList = [SELECT Id,Name,Resource__c,Resource__r.Appraisal_Date__c,Fiscal_Year__c,Fiscal_Year__r.Name,Avg_Rating__c,Recognization_Type__c,LastModifiedDate,LastModifiedBy.Name,Status__c,
-                         (SELECT Id,Name,Check_in_Date__c,Quarter_Start_Date__c,Goal_Name__c,Quarter_End_Date__c,Rating__c,Status__c,Type__c FROM Goals__r WHERE RecordTypeId =:kraRecordTypeId) FROM Fulfillment__c WHERE Fiscal_Year__c =:fyId and Resource__r.EMS_TM_User__c=:Userinfo.getUserId()];
+                         (SELECT Id,Name,Check_in_Date__c,Quarter_Start_Date__c,Goal_Name__c,Quarter_End_Date__c,Rating__c,Status__c,Type__c, Overall_Rating__c FROM Goals__r WHERE RecordTypeId =:kraRecordTypeId) FROM Fulfillment__c WHERE Fiscal_Year__c =:fyId and Resource__r.EMS_TM_User__c=:Userinfo.getUserId()];
         for(Fulfillment__c ful : returnList){
             List<quatWrapper> qlist = new List<quatWrapper>();
             for(Goal__c gl : ful.Goals__r){
@@ -78,6 +78,7 @@ public without sharing class myMetricsController {
                qw.status = gl.Status__c;
                qw.typeval = gl.Type__c;
                qw.rating = String.valueOf(gl.Rating__c);
+               qw.overallRating = gl.Overall_Rating__c;
                qw.allowedit = false;
                //smaske : PM_061 : updating conditon to only allow edit when status is "Active" in MY METRIC TAB
                //Previously it was : gl.Status__c != 'KRA Complete'
@@ -183,6 +184,7 @@ public without sharing class myMetricsController {
                qw.status = gl.Status__c;
                qw.typeval = gl.Type__c;
                qw.rating = String.valueOf(gl.Rating__c);
+                qw.overallRating = gl.Overall_Rating__c;
                qw.allowedit = false;
                 //smaske : PM_061 : updating conditon to only allow edit when status is "KRA Inreview" in MY TEAM TAB for selected Reportee's KRA
                //Previously it was : gl.Status__c != 'KRA Completed'
@@ -361,6 +363,8 @@ public without sharing class myMetricsController {
         public String typeval;
          @AuraEnabled
         public String rating;
+        @AuraEnabled
+        public String overallRating;
         @AuraEnabled
         public boolean allowedit;
         
