--- a/force-app/main/default/classes/RRController.cls
+++ b/force-app/main/default/classes/RRController.cls
@@ -24,7 +24,7 @@ public static final Id RR_SCORING_RECORDTYPEID = Schema.SObjectType.Reward_And_R
         Map<String,List<Reward_And_Recognition__c>> FywithNominations = new Map<String,List<Reward_And_Recognition__c>>();
         List<winnerdetails> currentList = new List<winnerdetails>();
         Map<String,winnerdetails> winnerMap = new Map<String,winnerdetails>(); 
-        for(Fiscal_Year__c fy : [SELECT Id,Name,Start_Date__c,End_Date__c FROM Fiscal_Year__c Order BY Start_Date__c ASC]){
+        for(Fiscal_Year__c fy : [SELECT Id,Name,Start_Date__c,End_Date__c FROM Fiscal_Year__c WHERE End_Date__c<=THIS_FISCAL_YEAR Order BY Start_Date__c  ASC]){
             if(fy.Start_Date__c <= currentdate && fy.End_Date__c >= currentdate){
                currentFY = fy.Id;
                currentFYName = fy.Id;
