--- a/force-app/main/default/classes/myTeamController.cls
+++ b/force-app/main/default/classes/myTeamController.cls
@@ -9,7 +9,7 @@ public without sharing class myTeamController {
         if(isPerAdmin){
             for(Resource_Resource_Relationship__c rrr : [SELECT Id,Resource_Reports_To__c,Resource_Reports_To__r.Name,Resource__c,Resource__r.Name,Resource__r.EMS_TM_User__r.IsPortalEnabled,Resource__r.EMS_RM_ApplicantStatus_Update__c FROM 
                                                          Resource_Resource_Relationship__c WHERE Resource__r.EMS_TM_User__r.isActive = true AND Resource__r.EMS_RM_ApplicantStatus_Update__c IN ('Active', 'Active - Probation')
-                                                         AND Resource__r.EMS_TM_User__r.IsPortalEnabled = true Order By Resource__r.Name ASC ]){
+                                                         AND Resource__r.EMS_TM_User__r.IsPortalEnabled = true AND Resource__r.EMS_TM_User__c !=: Userinfo.getUserId() Order By Resource__r.Name ASC ]){
                                                              resourceMap.put(rrr.Resource__r.Name,rrr.Resource__c); 
                                                          } 
         }else{
@@ -17,7 +17,7 @@ public without sharing class myTeamController {
                                                          Resource__r.Name FROM Resource_Resource_Relationship__c 
                                                          WHERE Resource_Reports_To__r.EMS_TM_User__c=:Userinfo.getUserId() AND Resource__r.EMS_TM_User__r.isActive = true  
                                                          AND Resource__r.EMS_RM_ApplicantStatus_Update__c IN ('Active', 'Active - Probation')
-                                                         AND Resource__r.EMS_TM_User__r.IsPortalEnabled = true Order By Resource__r.Name ASC]){
+                                                         AND Resource__r.EMS_TM_User__r.IsPortalEnabled = true AND Resource__r.EMS_TM_User__c !=: Userinfo.getUserId() Order By Resource__r.Name ASC]){
                                                              resourceMap.put(rrr.Resource__r.Name,rrr.Resource__c); 
                                                          }
         }
